--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "license": "ISC",
   "author": "minhhungle",
   "type": "module",
-  "main": "./src/index.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon ./src/index.js"
+    "start": "nodemon index.js"
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
